:recycle: Refractor code

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian
 
 RUN apt update -y
-RUN apt install openssh-server neovim vim openssl -y
+RUN apt install openssh-server vim openssl nmap curl wget -y
 
 COPY ./create_user.sh /
 RUN chmod +x /create_user.sh
