--- a/roles/deploy_student_container/tasks/main.yml
+++ b/roles/deploy_student_container/tasks/main.yml
@@ -26,3 +26,15 @@
       - "22"
   with_items: "{{ STUDENT_USER }}"
 
+- name: Sending an e-mail using Gmail SMTP servers
+  community.general.mail:
+    host: smtp.gmail.com
+    port: 587
+    username: "{{ SMTP_USERNAME }}"
+    password: "{{ SMTP_PASSWORD }}"
+    to:
+      - "{{ item.email }}"
+    subject: Credential for Pentest VM
+    body: "{{ BODY }}"
+  delegate_to: localhost
+  with_items: "{{ STUDENT_USER }}"
